--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "../",
+    "rootDir": "./",
     "lib": ["ES2022"],
     "types": ["node"],
     "sourceMap": true,
@@ -15,13 +15,10 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": false,
     "baseUrl": ".",
-    "paths": {
-      
-    }
+    "paths": {}
   },
   "include": [
-    "./**/*",
-    
+    "./**/*"
   ],
   "exclude": [
     "node_modules",
