--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,22 +1,31 @@
 {
   "builds": [
     {
-      "src": "api/**/*.ts",
-      "use": "@vercel/deno"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "https://mwanzo-tunes-server.onrender.com/api/$1"
+    },
+    {
+      "src": "/callback",
+      "dest": "https://mwanzo-tunes-server.onrender.com/callback"
+    },
+    {
+      "src": "/login",
+      "dest": "https://mwanzo-tunes-server.onrender.com/login"
+    },
+    {
+      "src": "/logout",
+      "dest": "https://mwanzo-tunes-server.onrender.com/logout"
     },
     {
       "src": "/(.*)",
-      "dest": "/public/index.html"
+      "dest": "/index.html"
     }
   ]
 }
