--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,14 @@
     "build": "tsc && npm run fix-paths",
     "start": "node dist/index.js",
     "fix-paths": "tsc-alias -p tsconfig.json",
-    "migrate:generate": "npx drizzle-kit generate",
-    "migrate:push": "npx drizzle-kit push",
-    "migrate": "npm run migrate:generate"
+
+    "migrate:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "migrate:apply":   "drizzle-kit migrate --config=drizzle.config.ts",
+    "migrate:push":    "drizzle-kit push --config=drizzle.config.ts",
+
+    "migrate": "npm run migrate:apply",
+
+    "postbuild": "npm run migrate"
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
