fix: use VITE_API_URL for all API calls

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -19,7 +19,7 @@
       "dest": "https://mwanzo-tunes-server.onrender.com/login"
     },
     {
-      "src": "/callback",
+      "src": "/api/callback",  
       "dest": "https://mwanzo-tunes-server.onrender.com/api/callback"
     },
     {
