fix: use VITE_API_URL for all API calls

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -18,6 +18,10 @@
       "src": "/login",
       "dest": "https://mwanzo-tunes-server.onrender.com/login"
     },
+     {
+      "src": "/callback",
+      "dest": "https://mwanzo-tunes-server.onrender.com/callback"
+    },
     {
       "src": "/api/logout",
       "dest": "https://mwanzo-tunes-server.onrender.com/api/logout"
