fix: use VITE_API_URL for all API calls

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -18,11 +18,10 @@
       "src": "/login",
       "dest": "https://mwanzo-tunes-server.onrender.com/login"
     },
-     {
-      "src": "/", 
-      "dest": "https://mwanzo-tunes-server.onrender.com/"
+    {
+      "src": "/api/callback",
+      "dest": "https://mwanzo-tunes-server.onrender.com/api/callback"
     },
-    
     {
       "src": "/api/logout",
       "dest": "https://mwanzo-tunes-server.onrender.com/api/logout"
